fix: Pass the configured heap size to the legacy client
The legacy jar branch passed no -Xms or -Xmx, so the Max Memory setting did
nothing.

Adds the flags before -cp, and loads the config unconditionally so the value is
populated for every launch mode. This raises the ceiling from the JVM default
to the configured value, 512MB without a config file.